@@ -56,7 +56,7 @@ protected:
 	 * @param hv specific hash calculator object.
 	 * @param kind human readable name of the hash algorithm to use.
 	 */
-	Hash(RecordVal* args, File* file, HashVal* hv, const char* kind);
+	Hash(IntrusivePtr<RecordVal> args, File* file, HashVal* hv, const char* kind);
 
 	/**
 	 * If some file contents have been seen, finalizes the hash of them and
@@ -83,8 +83,9 @@ public:
 	 * @return the new MD5 analyzer instance or a null pointer if there's no
 	 *         handler for the "file_hash" event.
 	 */
-	static file_analysis::Analyzer* Instantiate(RecordVal* args, File* file)
-		{ return file_hash ? new MD5(args, file) : nullptr; }
+	static file_analysis::Analyzer* Instantiate(IntrusivePtr<RecordVal> args,
+	                                            File* file)
+		{ return file_hash ? new MD5(std::move(args), file) : nullptr; }
 
 protected:
 
@@ -93,8 +94,8 @@ protected:
 	 * @param args the \c AnalyzerArgs value which represents the analyzer.
 	 * @param file the file to which the analyzer will be attached.
 	 */
-	MD5(RecordVal* args, File* file)
-		: Hash(args, file, new MD5Val(), "md5")
+	MD5(IntrusivePtr<RecordVal> args, File* file)
+		: Hash(std::move(args), file, new MD5Val(), "md5")
 		{}
 };
 
@@ -111,8 +112,9 @@ public:
 	 * @return the new MD5 analyzer instance or a null pointer if there's no
 	 *         handler for the "file_hash" event.
 	 */
-	static file_analysis::Analyzer* Instantiate(RecordVal* args, File* file)
-		{ return file_hash ? new SHA1(args, file) : nullptr; }
+	static file_analysis::Analyzer* Instantiate(IntrusivePtr<RecordVal> args,
+	                                            File* file)
+		{ return file_hash ? new SHA1(std::move(args), file) : nullptr; }
 
 protected:
 
@@ -121,8 +123,8 @@ protected:
 	 * @param args the \c AnalyzerArgs value which represents the analyzer.
 	 * @param file the file to which the analyzer will be attached.
 	 */
-	SHA1(RecordVal* args, File* file)
-		: Hash(args, file, new SHA1Val(), "sha1")
+	SHA1(IntrusivePtr<RecordVal> args, File* file)
+		: Hash(std::move(args), file, new SHA1Val(), "sha1")
 		{}
 };
 
@@ -139,8 +141,9 @@ public:
 	 * @return the new MD5 analyzer instance or a null pointer if there's no
 	 *         handler for the "file_hash" event.
 	 */
-	static file_analysis::Analyzer* Instantiate(RecordVal* args, File* file)
-		{ return file_hash ? new SHA256(args, file) : nullptr; }
+	static file_analysis::Analyzer* Instantiate(IntrusivePtr<RecordVal> args,
+	                                            File* file)
+		{ return file_hash ? new SHA256(std::move(args), file) : nullptr; }
 
 protected:
 
@@ -149,8 +152,8 @@ protected:
 	 * @param args the \c AnalyzerArgs value which represents the analyzer.
 	 * @param file the file to which the analyzer will be attached.
 	 */
-	SHA256(RecordVal* args, File* file)
-		: Hash(args, file, new SHA256Val(), "sha256")
+	SHA256(IntrusivePtr<RecordVal> args, File* file)
+		: Hash(std::move(args), file, new SHA256Val(), "sha256")
 		{}
 };
 
