@@ -5,8 +5,8 @@
 
 using namespace file_analysis;
 
-Unified2::Unified2(RecordVal* args, File* file)
-    : file_analysis::Analyzer(file_mgr->GetComponentTag("UNIFIED2"), args, file)
+Unified2::Unified2(IntrusivePtr<RecordVal> args, File* file)
+    : file_analysis::Analyzer(file_mgr->GetComponentTag("UNIFIED2"), std::move(args), file)
 	{
 	interp = new binpac::Unified2::Unified2_Analyzer(this);
 	}
@@ -16,9 +16,9 @@ Unified2::~Unified2()
 	delete interp;
 	}
 
-file_analysis::Analyzer* Unified2::Instantiate(RecordVal* args, File* file)
+file_analysis::Analyzer* Unified2::Instantiate(IntrusivePtr<RecordVal> args, File* file)
 	{
-	return new Unified2(args, file);
+	return new Unified2(std::move(args), file);
 	}
 
 bool Unified2::DeliverStream(const u_char* data, uint64_t len)
