@@ -18,11 +18,13 @@ public:
 	bool Undelivered(uint64_t offset, uint64_t len) override;
 	bool EndOfFile() override;
 
-	static file_analysis::Analyzer* InstantiateRequest(RecordVal* args, File* file);
-	static file_analysis::Analyzer* InstantiateReply(RecordVal* args, File* file);
+	static file_analysis::Analyzer* InstantiateRequest(IntrusivePtr<RecordVal> args,
+	                                                   File* file);
+	static file_analysis::Analyzer* InstantiateReply(IntrusivePtr<RecordVal> args,
+	                                                 File* file);
 
 protected:
-	OCSP(RecordVal* args, File* file, bool request);
+	OCSP(IntrusivePtr<RecordVal> args, File* file, bool request);
 
 private:
 	void ParseResponse(OCSP_RESPONSE*);
